fix horizontal overflow across different mobile device sizes, make image proportions slightly taller

--- a/src/style.css
+++ b/src/style.css
@@ -97,8 +97,8 @@ a:hover {
 }
 
 .thumbnail-category {
-  max-width: 11.7rem;
-  max-height: 16.38rem;
+  max-width: 100%;
+  max-height: 100%;
   /* width: 225px; */
   /* height: 317px; */
   /* height is 140% of width */
@@ -553,7 +553,7 @@ label {
   }
 
   .thumbnail-category {
-    padding: 3%;
+    /* padding: 3%; */
   }
 
   .loading-skeleton-span {
@@ -701,5 +701,7 @@ label {
     max-height: 50%;
     margin-top: 0;
     padding-top: 0;
+    min-width: max-content;
+    max-width: max-content;
   }
 }
